Change project to use gcc 15, for Pop!_OS and C++23 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ project(Solitaire4 LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_COMPILER "g++" CACHE STRING "C++ compiler" FORCE)
+set(CMAKE_C_COMPILER "gcc" CACHE STRING "C compiler" FORCE)
 
 # --------------------- Dependencies ---------------------
 find_package(glfw3  CONFIG REQUIRED)
@@ -29,6 +31,8 @@ add_executable(solitaire
         Game/window.cpp
         Game/window.hpp
 )
+
+target_compile_features(solitaire PUBLIC cxx_std_23)
 
 target_link_libraries(solitaire
     PRIVATE
